# autoreports

./: .env  .env.example  .gitignore  LAUNCH.md  README.md  architecture.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  docstrings_reference.py  fix_ruff.py  fix_ruff_final.py  pyproject.toml  requirements.txt  template_nir_1.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  debug.py  files.py  reports.py  templates.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: main.py  models.py
backend/app/schemas/: schemas.py
backend/app/services/: storage.py
backend/app/services/document/: parser.py
backend/app/services/llm/: provider.py
backend/app/services/rag/: bm25_retriever.py  chunker.py  context_builder.py  embeddings.py  hybrid_retriever.py  pipeline.py  vector_store.py
backend/app/services/report/: assembler.py  generator.py  rag_generator.py
backend/app/workers/: celery_app.py  tasks.py
backend/scripts/: create_admin.py
docs/: template_example.json
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  files.ts  reports.ts  templates.ts
frontend/src/components/: FileUploadZone.tsx  StatusBadge.tsx
frontend/src/components/layout/: AppLayout.tsx  AppSidebar.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useReportPolling.ts
frontend/src/mocks/: data.ts  enabled.ts
frontend/src/pages/: AdminReportsPage.tsx  AdminTemplatesPage.tsx  DashboardPage.tsx  FilesPage.tsx  Index.tsx  LoginPage.tsx  NewReportPage.tsx  ReportDetailPage.tsx  ReportsListPage.tsx  TemplatesPage.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
infra/nginx/: nginx.conf
