[project]
name = "autoreports-backend"
version = "0.1.0"
description = "Веб-сервис генерации и нормоконтроля НТД с ИИ — ООО «ВГСП»"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "structlog>=24.2",
    "celery>=5.4",
    "redis>=5.0",
    "chromadb>=0.5",
    "rank-bm25>=0.2",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "pymupdf>=1.24",
    "pymupdf4llm>=0.0.17",
    "pillow>=10.4",
    "pytesseract>=0.3",
    "jinja2>=3.1",
    "httpx>=0.27",
    "miniopy-async>=1.21",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

# uv
# uv — замена pip. Команды:
#   uv sync              # установить все зависимости из lock-файла
#   uv sync --extra dev  # + dev-зависимости
#   uv add <package>     # добавить зависимость
#   uv run uvicorn ...   # запустить команду в venv
#   uv lock              # обновить uv.lock
[dependency-groups]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

# Ruff
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app"]

[tool.ruff.lint]
# Включаем: pycodestyle (E,W), pyflakes (F), isort (I), bugbear (B),
#           pyupgrade (UP), flake8-annotations (ANN), pep8-naming (N),
#           flake8-simplify (SIM), flake8-return (RET)
select = ["E", "W", "F", "I", "B", "UP", "N", "SIM", "RET", "C90"]
mccabe.max-complexity = 14
ignore = [
    "E501",    # длина строки — контролируется line-length выше
    "B008",    # не ругаться на Depends() в аргументах функций (FastAPI-паттерн)
    "N818",    # Exception-классы могут не заканчиваться на Error
]

[tool.ruff.lint.per-file-ignores]
# Тесты: разрешаем assert, магические числа, длинные строки
"tests/**/*.py" = ["S101", "PLR2004", "E501"]
# Alembic-миграции: автогенерация, стиль не важен
"alembic/versions/*.py" = ["E", "W", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# mypy
[tool.mypy]
python_version = "3.12"
strict = false          # включить постепенно
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false

# pytest
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=40"
